<resources>
    <string name="app_name">Home Caravan</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">"337389436693834"</string>
    <string name="loading">Loading</string>
    <string name="image">Image</string>
    <string name="message">Message</string>
    <string name="share">Share Success</string>
    <string name="share_error">Share Error</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel_request">Cancel</string>
    <string name="accept">Accept</string>
    <string name="invite_agent">Invite this agent</string>
    <string name="login_name">Email or Mobile Phone Number</string>
    <string name="login_password">Password</string>
    <string name="sign_up">Sign Up now</string>
    <string name="register_login">Register</string>
    <string name="log_in">Login</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="activate_account">Activate Account</string>
    <string name="forgot_password_detail">Help us find your account</string>
    <string name="mobile_email">Mobile/Email Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="reset_password">Reset Password</string>
    <string name="activate_detail">If you forgot active code, you can enter email and tap resend
        button. Otherwise, enter active code and touch on submit button
    </string>
    <string name="verification_code">Verification code*</string>
    <string name="mobile_email_activate">Your email or mobile phone*</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="mobile_email_text_change_note">You can change your phone or email below:</string>
    <string name="takePictureError">Take Picture Error</string>
    <string name="create_account">Create An Account</string>
    <string name="account_profile">Account Profile</string>
    <string name="company">Company</string>
    <string name="account_settings">Account Settings</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="mobile_phone">Mobile Phone*</string>
    <string name="email">Email*</string>
    <string name="email2">Email</string>
    <string name="skip">Skip it, Im a buyer or seller</string>
    <string name="company_name">Company Name</string>
    <string name="company_name_2">Company name</string>
    <string name="company_name_buyer">Company Name</string>
    <string name="address">Address</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zipcode</string>
    <string name="phone">Phone</string>
    <string name="real_estate_professional">Real Estate Professional (Realtor)</string>
    <string name="non_professional">Non-Professional (Buyer or Seller)</string>
    <string name="do_you_have_a_realtor_agent_yet">Are you committed to a Realtor?</string>
    <string name="please_enter_your_agents_email_or_mobile_phone">Please enter your agents email or
        mobile phone
    </string>
    <string name="communication_preference">Communication Preference</string>
    <string name="sms">SMS</string>
    <string name="email_setting">Email</string>
    <string name="email_and_sms">Email and SMS</string>
    <string name="sync_appointments_with_personal_calendar">Sync appointments with personal
        calendar
    </string>
    <string name="re_type_your_password">Re-type your password</string>
    <string name="i_agree_to_the_terms_to_conditions">I agree to the terms to conditions</string>
    <string name="find_agent">Find Agent</string>
    <string name="enter_agent_create">Please enter your agents email address so that we can have
        theme accompany you on showings.
    </string>
    <string name="home_caravan_realtor">Home Caravan Realtor</string>
    <string name="enter_your_agent_details">Enter your agent details</string>
    <string name="fist_name_agent">First Name*</string>
    <string name="last_name_agent">Last Name*</string>
    <string name="email_agent">Email*</string>
    <string name="phone_agent">Phone*</string>
    <string name="realtor_found">Realtor found</string>
    <string name="realtor_not_found">Realtor not found</string>
    <string name="homecaravan_agent_found">HomeCaravan Agent found</string>
    <string name="correct_agent">Is this your correct agent?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="connect">Connect</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="term">Terms of Service</string>
    <string name="thank">Thank-You\'s</string>
    <string name="let_talk">Let\'s Talk</string>
    <string name="let_talk_detail">We love hearing from our users, and we hope you will be our
        friend on the internet
    </string>
    <string name="rate_google_play">Rate Us on the Google Play</string>
    <string name="company_name_account">Company Name</string>
    <string name="edit_company">Edit Company</string>
    <string name="account_type">Account Type</string>
    <string name="library">Libraries We Use</string>
    <string name="library_detail">The following stes forth attribution
        notices for third party software that
        may be contained in portions of the
        HomeCaravan mobile application.
        We thank the open source community for all
        of their contributions
    </string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="about_me">About Me</string>
    <string name="my_company">My Company</string>
    <string name="enter_agent">Please enter your agent\'s email address</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_message">New Message</string>
    <string name="to">To:</string>
    <string name="cc_bcc">CcBcc:</string>
    <string name="subject">Subject:</string>
    <string name="email_homecaravan">support@homecaravan.com</string>
    <string name="send">Send from my phone</string>
    <string name="select_country">Select a Country</string>
    <string name="advance_search">Advanced Search</string>
    <string name="favorite">Favorites</string>
    <string name="result">Results</string>
    <string name="my_showing">My Showings</string>
    <string name="upcoming">UpComing</string>
    <string name="past">Past</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="properties">Properties</string>
    <string name="availability">Availability</string>
    <string name="facts">Facts</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="contact">Contact</string>
    <string name="interaction">Interaction</string>
    <string name="view_on_map">View on Map</string>
    <string name="description_listing">Description</string>
    <string name="sort_listing">Sort by:</string>
    <string name="my_listing">My Listings</string>
    <string name="listing_description">Listing Description</string>
    <string name="zip">Zip*</string>
    <string name="property_type">Property Type*</string>
    <string name="listing_type">Listing Type*</string>
    <string name="price_unit">Price Unit*</string>
    <string name="price">Price*</string>
    <string name="sale_type">Sale Type*</string>
    <string name="baths">Baths*</string>
    <string name="bedrooms">Bedrooms*</string>
    <string name="garage">Garage*</string>
    <string name="pool">Pool*</string>
    <string name="square_feet">Square Feet*</string>
    <string name="lot_size">Lot Size*</string>
    <string name="year_built">Year Built*</string>
    <string name="timezone">Timezone*</string>
    <string name="add1">Address 1*</string>
    <string name="city_create">City*</string>
    <string name="state_create">State*</string>
    <string name="zip_create">Zip*</string>
    <string name="listing_contact_name">Contact Name</string>
    <string name="listing_office_phone">Office Phone</string>
    <string name="listing_mobile_phone">Mobile Phone</string>
    <string name="listing_email">Email</string>
    <string name="description">Description*</string>
    <string name="date_first_available">Date First Available</string>
    <string name="book_through">Book Through</string>
    <string name="appointment_length">Appointment Length</string>
    <string name="first_daily_appointment">First Daily Appointment</string>
    <string name="showing_conclude_daily">Showing Conclude Daily</string>
    <string name="time_format">Time Format</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="days_available">Days Available</string>
    <string name="required_showings">Required Notice of Showings:</string>
    <string name="number_appointments">Number of Concurrent Appointments:</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="ld_settings">Settings</string>
    <string name="ld_messages">Messages</string>
    <string name="introductions">Introductions</string>
    <string name="intro_content">These notes are custom messages that you can have sent along with
        the standard messages sent by the scheduling system.
    </string>
    <string name="confirmation_note">Confirmation Note</string>
    <string name="auto_send">Auto-send Reminder/Feedback?</string>
    <string name="remind">When to remind?</string>
    <string name="for_agents">For Agents</string>
    <string name="reminder_note">Appointment Reminder Note</string>
    <string name="selling_team">Selling Team</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="listing_details">Listing Details</string>
    <string name="route">Listing Details</string>
    <string name="search">Listing Details</string>
    <string name="refresh">Refresh map &amp; See all map listings</string>
    <string name="location">Listing Details</string>
    <string name="draw">Listing Details</string>
    <string name="transition_avatar">AvatarTransition</string>
    <string name="transition_morph_view" translatable="false">morph_view_transition</string>
    <string name="transition_name" translatable="false">square_transition</string>
    <string name="transition_toolbar_name" translatable="false">toolbar_transition</string>
    <string name="transition_shared_toolbar" translatable="false">shared_toolbar_transition</string>
    <string name="nav_step_title_1">Account Profile</string>
    <string name="nav_step_title_2">Company</string>
    <string name="nav_step_title_3">Account Settings</string>
    <string name="nav_step_title_4">Verification</string>
    <string name="change_method_title">Receive verification code via:</string>
    <string name="status_comment_hint">Describe current your property status here...</string>
    <string name="all_listings">All Listings</string>
    <string name="active_listings">Active Listings</string>
</resources>