<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar_temp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password_detail"
        android:textColor="@color/colorMain"
        android:textSize="16sp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:textSize="@dimen/text_size_custom_big"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/mobile_email"
        android:inputType="textWebEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/colorEditTextHint"
        app:met_baseColor="@color/colorEditText"
        app:met_errorColor="@color/color_validate_error"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorEditText"
        app:met_primaryColor="@color/colorMain"
        app:met_textColor="@color/colorEditText"
        app:met_textColorHint="@color/colorEditTextHint"
        app:met_underlineColor="@color/colorTransparentImage"
    />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btResetPassword"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:onClick="resetPassword"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:src="@drawable/ic_reset_password"/>

    </FrameLayout>
</LinearLayout>